BuildHughes/translation-tool/inputs/source_meta/objects/CP_SelfRegistrationLink__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Communication Preference Self registration Links.</description>
    <fields>
        <fullName>Sandbon_Name__c</fullName>
        <label>Sandbon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_URL__c</fullName>
        <label>Sandbox URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Self_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Activation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Activation</label>
        <type>Checkbox</type>
    </fields>
    <label>CP_SelfRegistrationLink</label>
</CustomObject>